--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt= "Roaring Lion">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt= "Roaring Lion" title= "Lion">
 
 </body>
 </html>
